--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
     <properties>
         <java.version>17</java.version>
-        <maven.test.skip>true</maven.test.skip>
+        <maven.test.skip>true</maven.test.skip> <!-- 🔥 DESACTIVA TODOS LOS TESTS -->
     </properties>
 
     <dependencies>
