--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,45 @@
 spring.application.name=sistemaintegralsena
 
-# ------------------ CONFIGURACIÓN DE SERVIDOR ------------------
-server.port=8082 
+# ------------------ SERVIDOR ------------------
+server.port=8082
 
-# ------------------ CONFIGURACIÓN DE BASE DE DATOS (CRÍTICO) ------------------
+# ------------------ BASE DE DATOS ------------------
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/sistemaintegralsena?serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password= 
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Configuración de JPA / Hibernate
-spring.jpa.hibernate.ddl-auto=update 
-spring.jpa.show-sql=true
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect  <-- ESTA LÍNEA DEBE SER ELIMINADA O COMENTADA
+# ------------------ CREACIÓN DE TABLAS (MODO MANUAL) ------------------
+spring.sql.init.mode=never
+spring.sql.init.schema-locations=classpath:sql/create_schema.sql
 
-# ------------------ CONFIGURACIÓN DE LOGGING / THYMELEAF ------------------
-logging.level.org.springframework.web=DEBUG
-logging.level.org.springframework.security=DEBUG
-logging.level.org.thymeleaf=TRACE
+# ------------------ HIBERNATE (SOLO VALIDAR) ------------------
+spring.jpa.hibernate.ddl-auto=validate
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
+spring.jpa.show-sql=false
+
+# ------------------ LOGGING (LIMPIO) ------------------
+logging.level.root=INFO
+logging.level.com.sena.sistemaintegralsena=DEBUG
+logging.level.org.springframework.web=INFO
+logging.level.org.springframework.security=INFO
+logging.level.org.thymeleaf=INFO
+
+# ------------------ VISTA ------------------
 spring.thymeleaf.cache=false
-
-# Configuración de Localización
 spring.web.locale=es
 spring.web.locale-resolver=fixed
+
+# ------------------ ANTI-CACHÉ ------------------
+spring.jpa.properties.hibernate.cache.use_second_level_cache=false
+spring.jpa.properties.hibernate.cache.use_query_cache=false
+spring.cache.type=none
+
+# ------------------ EMAIL ------------------
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=v64149378@gmail.com
+spring.mail.password=dndrihmgikrrhfmo
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
